-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.206 2008-03-05 19:38:53 remko Exp $
-----------------------------------------------------------------------------------------
2008-03-05	remko
	* grdinfo.c:		Implemented Welford (1962) algorithm for more precise one-pass
				computation of mean and sum of squares.
	* grdedit.c:		Adjust z_min and z_max when changing add_offset or scale_factor.
	* gmt_grdio.c:		Changed "Latitude", "Longitude" and "Time" to lowercase only.
	* gmt_nc.c:		Use coordinate variables lon(lon), lat(lat) or time(time) when
				appropriate. When updating: need to remove "add_offset" when 0 and
				"scale_factor" when 1.
	* grd2xyz.c:		Do not abort with -R exceeds grid; simply output common region.

2008-03-04	remko
	* grdmath.c, gmtmath.c:	Implemented Welford (1962) algorithm in KURT, SKEW and STD operators
				for more precise one-pass computation of mean and sum of squares.

2008-02-29	remko
	* makefile:		More sure-fire way to install libraries. Also give shared libs mode 755.
	* isogmt.in, isogmt.txt:	Script to run GMT in isolation mode introduced
	* GMT_App_P_{1,2}.sh:	Isolation mode examples
	* GMT_Appendix_P.tex:	Added description of isolation mode

2008-02-28	pwessel
	* mgd77/mgd77info.c:	Same issue as minmax that was fixed on 2008-01-31.

2008-02-27	remko
	* gmt_io.[ch], gmt_calclock.[ch]:	Removed GMT_dt_from_usert, GMT_usert_from_dt, GMT_dtime.
				These were remnants of a time that internal time representation was entirely
				in rata die numbers. Since computations are done extensively with relative
				time (in doubles) keeping the conversion double-to-double became non-sensical.

2008-02-25	pwessel
	* gmt_io.c:		Now skips blank lines that has leading whitespace.  Function
				GMT_is_a_blank_line (char *line) is now used wherever ascii
				input is processed.
	* pscontour.c:		-T option was susceptible to infinite loop if bad record was found.

2008-02-25	remko